[package]
name = "hitdns"
version = "0.4.4"
edition = "2021"
description = "hitdns is a DNS forward server optimized for cache hit ratio and query latency."
license = "GPL-3.0"
authors = ["Delta4 <delta4chat@gmx.com>", "Your Name <you@example.com>"]
repository = "https://github.com/delta4chat/hitdns"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = [ "sqlite", "ftlog" ]
sqlite = [ "dep:sqlx" ]
sled = [ "dep:sled" ]
ftlog = [ "dep:ftlog", "dep:anstyle", "dep:time" ]

[dependencies]
anyhow = "1.0.79"
async-tls = "0.13.0"
#async-trait = "0.1.77"
bincode = "1.3.3"
bytes = "1.5.0"
clap = { version = "4.4.18", features = ["derive", "debug"] }
directories = "5.0.1"
env_logger = "0.11.1"
hickory-proto = { version = "0.24.0", default-features = false }
hyper = { version = "0.14.21", features = ["client"], default-features = false }

log = "0.4.20"

ftlog   = { optional = true, version = "0.2.12", features = ["tsc", "once_cell"], default-features = false }
anstyle = { optional = true, version = "1.0.6" }
time    = { optional = true, version = "0.3.34", features = ["alloc", "formatting"] }

once_cell = "1.19.0"

# HTTPS library for DoH client
reqwest = { version = "0.11.24", features = ["rustls-tls"], default-features = false }

# QUIC library for DoQ client
quinn = { version = "0.10.2", features = ["tls-rustls", "runtime-async-std"], default-features = false }
rustls = { version = "0.21.10", default-features = false }
# builtin Root CA list
webpki-roots = "0.26.1"

scc = { version = "2.0.16", features = ["serde"] }
serde = { version = "1.0.196", features = ["derive"] }
fastrand = "2.0.1"
smol = "2.0.0"
smol-timeout = "0.6.0"

#smolscale = { version = "0.4.4", features = ["preempt"] }

smolscale2 = { version = "0.5.2", features = ["preempt"] }
#smolscale2 = { path = "../smolscale", features = ["preempt"] }

portable-atomic = "1.6.0"

sqlx = { optional = true, version = "0.7.3", features = ["runtime-async-std", "sqlite"], default-features = false }

sled = { optional = true, version = "0.34.7", features = ["compression", "zstd"], default-features = false }
env_filter = "0.1.0"
#sled = { optional = true, version = "1.0.0-alpha.120" }

[profile.dev]
panic = "unwind"
opt-level = 2
lto = "off"
#strip = "none"
codegen-units = 1
overflow-checks = true
debug-assertions = true
debug = "limited"
incremental = false

[profile.release]
panic = "unwind"
opt-level = 3
lto = true
strip = "symbols"
codegen-units = 1
overflow-checks = true
debug-assertions = false
debug = "line-tables-only"
incremental = false

