[package]
name = "hitdns"
version = "0.7.0"
edition = "2021"
description = "hitdns is a DNS forward server optimized for cache hit ratio and query latency."
license = "GPL-3.0"
authors = ["Delta4 <delta4chat@gmx.com>", "Your Name <you@example.com>"]
repository = "https://github.com/delta4chat/hitdns"
keywords = ["dns", "dns-over-https", "doh", "cache", "dns-server"]
categories = ["command-line-utilities", "network-programming", "caching", "web-programming::http-server", "web-programming::http-client"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = [ "vergen", "sqlite", "ftlog" ]
#default = [ "vergen", "sqlite", "ftlog", "doh3" ]

doh3 = [ "dep:reqwest-h3" ]

doq = [ "dep:quinn" ]
dot = [ "dep:async-tls" ]

sqlite = [ "dep:sqlx" ]
ftlog = [ "dep:ftlog2", "dep:anstyle", "dep:time" ]

vergen = [ "dep:vergen" ]

[dependencies]
anyhow = "1.0.79"
async-tls = { optional = true, version = "0.13.0" }

serde = { version = "1.0.196", features = ["alloc", "derive", "rc", "std"] }
serde_json = { version = "1.0.128", features = ["preserve_order"] }
bincode = "1.3.3"
bytes = "1.5.0"
quoted_printable = "0.5.0"

clap = { version = "4.5.20", features = ["derive"] }
directories = "6.0.0"
hickory-proto = { version = "0.24.0", default-features = false, features = ["dnssec"] }

log = "0.4.20"
env_filter = "0.1.0"
env_logger = "0.11.1"

#async-h1 = "2.3.4"

async-h1b = "3.0.7"
#async-h1b = { path = "../async-h1" }

http-types = { version = "2.12.0", default-features = false }

#ftlog  = { optional = true, version = "0.2.12", features = ["tsc"], default-features = false }

ftlog2 = { optional = true, version = "0.3.2", features = ["tsc"] }
#ftlog2 = { optional = true, version = "0.3.1", path = "../ftlog", features = ["tsc"] }

anstyle = { optional = true, version = "1.0.6" }
time    = { optional = true, version = "0.3.36", features = ["alloc", "formatting"] }

once_cell = "1.19.0"

# TLS library for DoH/DoT
rustls = { version = "0.23.14", features = ["custom-provider", "std", "tls12"], default-features = false }

# HTTPS library for DoH client
reqwest = { package = "reqwest-h3", version = "0.13.1", features = ["rustls-tls", "http2"], default-features = false }

reqwest-h3 = { optional = true, version = "0.13.1", features = ["rustls-tls", "http2", "unstable", "http3"], default-features = false }
#reqwest-h3 = { path = "../reqwest", features = ["rustls-tls", "http2", "unstable", "http3"], default-features = false }

#hyper = { version = "0.14.21", features = ["client"], default-features = false }

# QUIC library for DoQ client
quinn  = { optional = true, version = "0.11.6", features = ["rustls", "runtime-async-std"], default-features = false }

scc2 = { version = "2.4.0", features = ["serde"] }
fastrand = "2.1.0"

smol = "2.0.0"
smoltimeout = "0.6.2"

#smolscale = { version = "0.4.4", features = ["preempt"] }

smolscale2 = { version = "0.6.0", features = ["preempt", "async-compat"] }
#smolscale2 = { path = "../smolscale", features = ["preempt", "async-compat"] }

portable-atomic = { version = "1.6.0", features = ["float"] }

sqlx = { optional = true, version = "0.8.2", features = ["runtime-async-std", "sqlite"], default-features = false }

sled = { optional = true, version = "0.34.7", features = ["compression", "zstd"], default-features = false }
#sled = { optional = true, version = "1.0.0-alpha.120" }

event-listener = { version = "5.3.1", features = ["portable-atomic"] }
toml-env = { version = "1.2.0", features = ["log"] }
data-encoding = "2.6.0"
moka2 = { version = "0.13.0", default-features = false, features = ["future", "logging", "quanta"] }

anypki = "0.1.8"
#anypki = { path = "../anypki" }

rustls-native-certs = "0.8.1"
rustls-rustcrypto = { version = "0.0.2-alpha", features = ["logging"] }

[build-dependencies]
vergen = { optional = true, version = "8.3.2", features = ["build", "cargo", "cargo_metadata", "cfg-if", "git", "gitoxide", "gix", "regex", "rustc", "rustc_version", "si", "sysinfo", "time"], default-features = false }

[profile.dev]
panic = "unwind"
opt-level = 2
lto = "off"
#strip = "none"
codegen-units = 256
overflow-checks = true
debug-assertions = true
debug = "limited"
incremental = true

[profile.release]
panic = "unwind"
opt-level = 3
lto = true
strip = true
codegen-units = 1
overflow-checks = true
debug-assertions = false
debug = 1
incremental = false


